@@ -27,3 +27,5 @@ melebkgd.25.png -1 0 -253 -77
 melebkgd.26.png -1 0 -253 -77
 melebkgd.27.png -1 0 0 50
 melebkgd.28.png -1 0 -2 -22
+melebkgd.29.png -1 0 -268 -217
+melebkgd.30.png -1 0 -268 -217
